【Web】一通りの実装

--- a/web/src/app/menu/tool-bar/tool-bar.html
+++ b/web/src/app/menu/tool-bar/tool-bar.html
@@ -7,6 +7,19 @@
 
     <!-- タイトル -->
     <span>1st Speedrun</span>
+
+    <span class="spacer"></span>
+
+    <!-- 検索フォーム -->
+    <form appearance="fill">
+      <mat-form-field>
+        <input matInput name="searchKeyword" required>
+        <button mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+      </mat-form-field>
+    </form>
+
     <span class="spacer"></span>
 
     <!-- 設定メニュー -->
