--- a/web/src/app/video-module/video/video.component.scss
+++ b/web/src/app/video-module/video/video.component.scss
@@ -1,8 +1,26 @@
-.example-card {
-  max-width: 150px;
+.card {
+  // max-width: 140px;
+  width: 140px;
+  height: 230px;
 }
 
-.example-header-image {
+.title {
+  width: 130px;
+  font-size: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.sub-title {
+  width: 130px;
+  font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
