【Web】ルーティングの設定

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -8,9 +8,6 @@
 
   <!-- メインコンテンツ -->
   <mat-sidenav-content class="center">
-    <h1>{{title}}</h1>
-    <div class="container" fxLayout="row wrap" fxLayoutGap="10px grid" fxLayoutAlign="center">
-      <ng-container #dynamic></ng-container>
-    </div>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
