--- a/web/src/app/menu-module/tool-bar/tool-bar.html
+++ b/web/src/app/menu-module/tool-bar/tool-bar.html
@@ -6,7 +6,7 @@
     </button>
 
     <!-- タイトル -->
-    <span>1st Speedrun</span>
+    <span>Speedrun 1st</span>
 
     <span class="spacer"></span>
 
