--- a/web/src/app/video-module/home/video-card/video-card.component.scss
+++ b/web/src/app/video-module/home/video-card/video-card.component.scss
@@ -1,3 +1,8 @@
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .card {
   // max-width: 140px;
   width: 140px;
@@ -23,4 +28,9 @@
 .header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
+}
+
+mat-card img {
+  object-fit: contain;
+  height: 130px;
 }
