--- a/web/src/app/video-module/video-detail/video-detail.component.html
+++ b/web/src/app/video-module/video-detail/video-detail.component.html
@@ -1,17 +1,27 @@
-<h2>{{record.game.gameTitle}}</h2>
+<div fxLayout="row">
+  <div fxFlex="100" fxFlexFill>
+    <div [ngSwitch]="this.getVideoHost()">
+      <div *ngSwitchCase="'Youtube'">
+        <youtube-player src={{this.getVideoId()}}></youtube-player>
+      </div>
+      <div *ngSwitchCase="'Twitch'">
+        <twitch-player src={{this.getVideoId()}}></twitch-player>
+      </div>
+      <div *ngSwitchDefault>
+        {{this.record.bestVideoLink}}
+      </div>
+    </div>
 
-<div>
-  <div [ngSwitch]="this.getVideoHost()">
-    <div *ngSwitchCase="'Youtube'">
-      <youtube-player videoId={{this.getVideoId()}}></youtube-player>
-    </div>
-    <div *ngSwitchCase="'Twitch'">
-      <twitch-player src={{this.getVideoId()}} width="100%"></twitch-player>
-    </div>
-    <div *ngSwitchDefault>
-      {{this.record.bestVideoLink}}
-    </div>
+    <button mat-raised-button (click)="goBack()">
+      <mat-icon>arrow_back_ios</mat-icon>
+      Back
+    </button>
+
   </div>
+
+  <div fxFlex="480px" fxFlexFill>
+    <video-detail-information [record]="this.record"></video-detail-information>
+  </div>
+
 </div>
 
-<button mat-button>Button da yo</button>
