--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,9 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-
+mat-sidenav-content {
+  background-color: #f0f0f0;
+}
 h1 {
   background: #1B73BA;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px;
@@ -59,6 +64,7 @@ h4 {
   margin: 0 0 20px;
   padding-left: 5px;
 }
+
 a {
   color: inherit;
   text-decoration: none;
