【WEB】ベータ版実装

--- a/web/src/app/menu-module/tool-bar/tool-bar.html
+++ b/web/src/app/menu-module/tool-bar/tool-bar.html
@@ -25,7 +25,7 @@
     <span class="spacer"></span>
 
     <!-- 設定メニュー -->
-    <button mat-icon-button [matMenuTriggerFor]="menu">
+    <button mat-icon-button [matMenuTriggerFor]="menu" disabled>
       <mat-icon>settings</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
