--- a/web/src/app/video-module/home/home.component.html
+++ b/web/src/app/video-module/home/home.component.html
@@ -7,3 +7,6 @@
 >
   <ng-container #videoCardPlace></ng-container>
 </div>
+<div class="loadWrapper">
+  <button mat-raised-button class="loadButton" (click)="loadRecord()">Load</button>
+</div>
