--- a/web/src/app/video-module/video-detail/video-detail-information-runner/video-detail-information-runner.component.scss
+++ b/web/src/app/video-module/video-detail/video-detail-information-runner/video-detail-information-runner.component.scss
@@ -1,7 +1,7 @@
 .base {
   height: 300px;
 
-  border: 1px solid #999999;
+  // border: 1px solid #999999;
 
 }
 
@@ -22,9 +22,6 @@
   left: 60px;
   top: 20px;
 
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
   font-size: 26px;
   line-height: 28px;
 }
