--- a/web/src/app/video-module/video-detail/video-detail.component.scss
+++ b/web/src/app/video-module/video-detail/video-detail.component.scss
@@ -1,4 +1,10 @@
-.contents {
+.main-column {
   margin: 5px;
   padding: 5px;
+}
+.side-column {
+  width: 400px;
+  @media (max-width: 1000px) {
+    display:none;
+  }
 }
