--- a/web/src/app/menu-module/tool-bar/tool-bar.html
+++ b/web/src/app/menu-module/tool-bar/tool-bar.html
@@ -13,16 +13,14 @@
     <span class="spacer"></span>
 
     <!-- 検索フォーム -->
-    <form appearance="fill">
+    <!-- <form appearance="fill">
       <mat-form-field>
         <input matInput name="searchKeyword" required disabled>
         <button mat-icon-button  disabled>
           <mat-icon>search</mat-icon>
         </button>
       </mat-form-field>
-    </form>
-
-    <span class="spacer"></span>
+    </form> -->
 
     <!-- 設定メニュー -->
     <button mat-icon-button [matMenuTriggerFor]="menu" disabled>
