--- a/web/src/app/video-module/home/video-card/video-card.component.scss
+++ b/web/src/app/video-module/home/video-card/video-card.component.scss
@@ -1,36 +1,51 @@
-a {
-  color: inherit;
-  text-decoration: none;
-}
+$card-width: 300px;
 
 .card {
-  // max-width: 140px;
-  width: 140px;
-  height: 230px;
+  width: $card-width;
+  height: $card-width*0.56 + 150px;
+
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .title {
-  width: 130px;
-  font-size: 15px;
+  width: $card-width - 10px;
+  height: 28px;
+
+  font-size: 26px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
 }
 
 .sub-title {
-  width: 130px;
-  font-size: 12px;
+  width: $card-width - 10px;
+  height: 22px;
+
+  font-size: 20px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
 
-.header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
 }
 
 mat-card img {
   object-fit: contain;
-  height: 130px;
+  height: $card-width*0.56;
+}
+
+.timer {
+  width: $card-width - 10px;
+
+  font-size: 20px;
+}
+
+.footer {
+  margin: 10px;
+
+  text-align: right;
+  font-size: 16px;
+
+  // background-color: red;
 }
