【WEB】ルーティングとレイアウトの修正

--- a/web/src/app/video-module/home/home.component.html
+++ b/web/src/app/video-module/home/home.component.html
@@ -1,8 +1,9 @@
 <h2 class="header">Today's Run</h2>
-<div class="cardList" fxLayoutAlign="center">
+<div class="cardList">
   <ng-container #videoCardPlace></ng-container>
 </div>
 
 <div class="loadWrapper">
   <button mat-raised-button class="loadButton" (click)="loadRecord()">Load</button>
 </div>
+
