--- a/web/src/app/video-module/home/home.component.scss
+++ b/web/src/app/video-module/home/home.component.scss
@@ -6,46 +6,12 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
+  align-items: flex-start;
+  align-content: flex-start;
   row-gap: 60px;
   column-gap: 60px;
 }
-/* Column Gap */
-.cardList > * {
-  box-sizing: border-box;
-}
-.cardList > *:not(:last-child) {
-  margin-right: 32px;
-}
-/* Item sizing */
-.cardListItem {
-  flex: 0 1 calc(33.3% - 32px);
-}
-
-/* medium size viewport */
-@media screen and (max-width: 959px) {
-  /* Column Gap */
-  .cardList > *:not(:last-child) {
-    margin-right: 32px;
-  }
-  /* Item sizing */
-  .cardListItem {
-    flex: 0 1 calc(50% - 32px);
-  }
-}
-/* small size viewport */
-@media screen and (max-width: 599px) {
-  .cardList {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  .cardList > *:not(:last-child) {
-    margin-right: unset;
-    margin-bottom: 32px;
-  }
-}
-
 
 
 .loadWrapper {
