--- a/web/src/app/video-module/home/video-card/video-card.component.scss
+++ b/web/src/app/video-module/home/video-card/video-card.component.scss
@@ -12,7 +12,7 @@ $card-width: 300px;
   width: $card-width - 10px;
   height: 28px;
 
-  font-size: 26px;
+  font-size: 1.3rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -23,7 +23,7 @@ $card-width: 300px;
   width: $card-width - 10px;
   height: 22px;
 
-  font-size: 20px;
+  font-size: 1rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -38,14 +38,12 @@ mat-card img {
 .timer {
   width: $card-width - 10px;
 
-  font-size: 20px;
+  font-size: 1rem;
 }
 
 .footer {
   margin: 10px;
 
   text-align: right;
-  font-size: 16px;
-
-  // background-color: red;
+  font-size: 1rem;
 }
