【WEB】フォルダ構成の変更

--- a/web/src/app/module/video-module/video-detail/video-detail.component.html
+++ b/web/src/app/module/video-module/video-detail/video-detail.component.html
@@ -7,9 +7,13 @@
       <div *ngSwitchCase="'Twitch'">
         <twitch-player src={{this.getVideoId()}}></twitch-player>
       </div>
+      <div *ngSwitchCase="'Bilibili'">
+        <bilibili-player src={{this.getVideoId()}}></bilibili-player>
+      </div>
       <div *ngSwitchDefault>
         {{this.record.bestVideoLink}}
       </div>
+
     </div>
 
     <video-detail-overview [record]="this.record"></video-detail-overview>
