--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<tool-bar (openSideMenuEvent)="sideMenu.toggle()">Loading</tool-bar>
+<tool-bar (openSideMenuEvent)="sideMenu.toggle()"></tool-bar>
 
 <mat-sidenav-container class="container">
   <!-- サイドメニュー -->
