--- a/web/src/app/module/player-module/root-player/root-player.component.scss
+++ b/web/src/app/module/player-module/root-player/root-player.component.scss
@@ -19,10 +19,11 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  line-height: 3rem;
 }
 
 .frame span {
-  font-size: 3rem;
+  font-size: 2rem;
   font-family: 'Russo One', sans-serif;
   color: #808080;
 }
