--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -69,3 +69,6 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
